--- a/dates.html
+++ b/dates.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Important Dates | POLAR @ 2025</title>
+  <title>Important Dates | POLAR @ 2026</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/style.css"/>
@@ -13,38 +13,78 @@
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link" href="index.html#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link" href="index.html#participation">Participation</a>
+    <a class="nav-link" href="participation.html">Participation</a>
     <a class="nav-link" href="organizers.html">Organizers</a>
   </nav>
 
 
-  <div class="container my-5">
-    <h1 class="text-center mb-4">Important Dates</h1>
-    <p class="lead text-center mb-5">Here are the key milestones for the shared task:</p>
-
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <ul class="important-dates list-unstyled">
-          <li><strong>Sample data ready:</strong> <span>15 July 2024</span></li>
-          <li><strong>Training data ready:</strong> <span>November 2024</span></li>
-          <li><strong>Evaluation start:</strong> <span>21 January 2025</span></li>
-          <li><strong>Evaluation end:</strong> <span>by 31 January 2025</span></li>
-          <li><strong>System paper submission due:</strong> <span>February 2025</span></li>
-          <li><strong>Notification to authors:</strong> <span>31 March 2025</span></li>
-          <li><strong>Camera ready due:</strong> <span>21 April 2025</span></li>
-        </ul>
-      </div>
-    </div>
+<section class="important-dates container py-5">
+  <div class="dates-header text-center mb-4">
+    <h2>📅 Important Dates – SemEval-2026</h2>
+    <p class="text-muted">Keep track of the key milestones for your participation in the Polar task.<br>All deadlines are <strong>11:59 PM AoE (Anywhere on Earth)</strong>.</p>
   </div>
 
+  <div class="table-responsive">
+    <table class="dates-table table table-bordered">
+      <thead class="table-light">
+        <tr>
+          <th scope="col">📆 Date</th>
+          <th scope="col">📌 Event</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>October 2025</td>
+          <td>Call for Participation Opens</td>
+        </tr>
+        <tr>
+          <td>December 2025</td>
+          <td>Trial Data Released</td>
+        </tr>
+        <tr>
+          <td>January 2026</td>
+          <td>Training Data Released</td>
+        </tr>
+        <tr>
+          <td>February 2026</td>
+          <td>Test Data Released</td>
+        </tr>
+        <tr>
+          <td>March 2026</td>
+          <td>System Submission Deadline</td>
+        </tr>
+        <tr>
+          <td>April 2026</td>
+          <td>Evaluation Results Released</td>
+        </tr>
+        <tr>
+          <td>May 2026</td>
+          <td>System Paper Submission Deadline</td>
+        </tr>
+        <tr>
+          <td>June 2026</td>
+          <td>Notification of Acceptance</td>
+        </tr>
+        <tr>
+          <td>July 2026</td>
+          <td>Camera-Ready Papers Due</td>
+        </tr>
+        <tr>
+          <td>August 2026</td>
+          <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer-section mt-5">
-    <div class="footer-container">
-      <p>&copy; 2025 POLAR Shared Task. All rights reserved.</p>
-      <p>Made with ❤️ by the POLAR Team</p>
-    </div>
-  </footer>
+<footer class="footer-section">
+  <div class="footer-container text-center">
+    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
+    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
+    <p>Made with ❤️ by the POLAR Team</p>
+  </div>
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
