--- a/organizers.html
+++ b/organizers.html
@@ -15,42 +15,69 @@
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link" href="index.html#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link" href="index.html#participation">Participation</a>
+    <a class="nav-link" href="participation.html">Participation</a>
     <a class="nav-link active" href="organizers.html">Organizers</a>
   </nav>
 
   <!-- Page Content -->
-  <div class="container my-5">
-    <h1 class="text-center mb-5">Organizers</h1>
+  <section class="organizers" style="margin-top: 2rem;">
+  <div class="container">
+    <h2>👩‍💼 Organizers</h2>
+    <p>This task is organized by a diverse team of researchers passionate about sentiment analysis, social media, multilingual NLP, and explainable AI. We aim to foster innovation, collaboration, and impactful research through this shared task.</p>
 
-    <div class="row justify-content-center">
-      <div class="col-md-10">
-        <section class="mb-5">
-          <h2 class="organizer-name">Polarization Processing Lab</h2>
-          <p class="organizer-desc">
-            The Polarization Processing Lab focuses on understanding and addressing polarization in public discourse through cutting-edge NLP techniques and computational social science. The lab is known for its interdisciplinary research and collaborations across linguistics, machine learning, and media studies.
-          </p>
-          <a href="https://polarization-processing.org" target="_blank" rel="noopener noreferrer" class="organizer-link">🌐 Visit Website</a>
-        </section>
+    <h3>🧑‍🔬 Core Organizing Team</h3>
+    <ul>
+      <li>
+        <strong>Dr. [Lead Organizer's Name]</strong><br>
+        University / Institution Name<br>
+        Expertise: 
+      </li>
+      <li>
+        <strong>[Second Organizer's Name]</strong><br>
+        University / Institution Name<br>
+        Expertise: 
+      </li>
+      <li>
+        <strong>[Third Organizer's Name]</strong><br>
+        University / Institution Name<br>
+        Expertise: 
+      </li>
+      <li>
+        <strong>[Fourth Organizer's Name]</strong><br>
+        University / Institution Name<br>
+        Expertise: 
+      </li>
+    </ul>
 
-        <section class="mb-5">
-          <h2 class="organizer-name">University of Global Studies</h2>
-          <p class="organizer-desc">
-            The University of Global Studies is an institution committed to fostering inclusive and innovative research in the fields of social sciences, data science, and computational linguistics. It brings academic rigor and global perspective to initiatives such as the POLAR shared task.
-          </p>
-          <a href="https://uniglobal.edu" target="_blank" rel="noopener noreferrer" class="organizer-link">🌐 Visit Website</a>
-        </section>
-      </div>
-    </div>
+    <h3>💬 Contact Us</h3>
+    <p>For any queries related to the task, dataset, or participation, feel free to write to us:</p>
+    <p><a href="mailto:polar.semeval2026@nlp-research.org" style="font-weight: bold;">📧 polar.semeval2026@nlp-research.org</a></p>
+
+    <p>We also encourage you to follow updates and join discussions via:</p>
+    <ul>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">Mailing List</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">Twitter/X Profile</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">CodaLab Task Page</a></li>
+    </ul>
+
+    <h3>🤝 Collaborating Institutions</h3>
+    <ul>
+      <li>[University / Lab 1]</li>
+      <li>[University / Lab 2]</li>
+      <li>[Research Center or Organization]</li>
+    </ul>
+    <p>If you or your organization are interested in collaborating or sponsoring, please get in touch with us.</p>
   </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer-section mt-5">
-    <div class="footer-container">
-      <p>&copy; 2025 POLAR Shared Task. All rights reserved.</p>
-      <p>Made with ❤️ by the POLAR Team</p>
-    </div>
-  </footer>
+<footer class="footer-section">
+  <div class="footer-container text-center">
+    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
+    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
+    <p>Made with ❤️ by the POLAR Team</p>
+  </div>
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
